<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaSiC</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search</string>
    <string name="action_profile">Profile</string>
    <string name="action_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="home">Explore</string>
    <string name="profile_message">Jane Doe</string>
    <string name="login_message">Log in with Facebook</string>
    <string name="settings_message">Edit your settings</string>
    <string name="search_message">Searching....</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="title_section1">Seller</string>
    <string name="title_section2">Items for Sale</string>
    <string name="title_section3">Contact Information</string>
    <string name="title_activity_frag1">Frag1</string>

</resources>
