<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/home"
        android:icon="@drawable/ic_action_star"
        android:title="@string/home"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_user"
        android:title="@string/action_profile"
        app:showAsAction="collapseActionView|ifRoom" />

    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="collapseActionView|ifRoom" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
